--- a/EVM_logs_decode.ipynb
+++ b/EVM_logs_decode.ipynb
@@ -440,56 +440,56 @@
        "      <th>0</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(aggregatorRoundId, answer, transmitter, obser...</td>\n",
-       "      <td>b'/\\x858\\xa8_d&gt;e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...</td>\n",
-       "      <td>21692255</td>\n",
+       "      <td>b'E\\xa9\\xbd\\xa2\\xb4!&lt;\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...</td>\n",
+       "      <td>21692352</td>\n",
        "      <td>NewTransmission</td>\n",
-       "      <td>104</td>\n",
-       "      <td>b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...</td>\n",
-       "      <td>23</td>\n",
+       "      <td>835</td>\n",
+       "      <td>b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(roundId, startedBy, startedAt)</td>\n",
-       "      <td>b'/\\x858\\xa8_d&gt;e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...</td>\n",
-       "      <td>21692255</td>\n",
+       "      <td>b'E\\xa9\\xbd\\xa2\\xb4!&lt;\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...</td>\n",
+       "      <td>21692352</td>\n",
        "      <td>NewRound</td>\n",
-       "      <td>105</td>\n",
-       "      <td>b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...</td>\n",
-       "      <td>23</td>\n",
+       "      <td>836</td>\n",
+       "      <td>b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(current, roundId, updatedAt)</td>\n",
-       "      <td>b'/\\x858\\xa8_d&gt;e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...</td>\n",
-       "      <td>21692255</td>\n",
+       "      <td>b'E\\xa9\\xbd\\xa2\\xb4!&lt;\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...</td>\n",
+       "      <td>21692352</td>\n",
        "      <td>AnswerUpdated</td>\n",
-       "      <td>106</td>\n",
-       "      <td>b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...</td>\n",
-       "      <td>23</td>\n",
+       "      <td>837</td>\n",
+       "      <td>b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(aggregatorRoundId, answer, transmitter, obser...</td>\n",
-       "      <td>b'\\x1d\\xb5\\xe4\\xb7\\x14+\\xc8\\xcf\\xaf\\xaab\\x1f\\x...</td>\n",
-       "      <td>21692260</td>\n",
+       "      <td>b':\\xde\\xa4\\xfe}u\\x81=Z@u,!\\x02\\x84 \\xd5\\x89$\\...</td>\n",
+       "      <td>21692354</td>\n",
        "      <td>NewTransmission</td>\n",
-       "      <td>211</td>\n",
-       "      <td>b'%\\x96y!\\x93\\x80\\xc8\\x8d\\xe5B\\xa2\\xfc\\x84\\x8f...</td>\n",
-       "      <td>6</td>\n",
+       "      <td>399</td>\n",
+       "      <td>b'\\xc6ThY\\xc8&amp;\\x86\\x82\\xb8\\xcad\\xfaM\\xe6\\x89\\x...</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(roundId, startedBy, startedAt)</td>\n",
-       "      <td>b'\\x1d\\xb5\\xe4\\xb7\\x14+\\xc8\\xcf\\xaf\\xaab\\x1f\\x...</td>\n",
-       "      <td>21692260</td>\n",
+       "      <td>b':\\xde\\xa4\\xfe}u\\x81=Z@u,!\\x02\\x84 \\xd5\\x89$\\...</td>\n",
+       "      <td>21692354</td>\n",
        "      <td>NewRound</td>\n",
-       "      <td>212</td>\n",
-       "      <td>b'%\\x96y!\\x93\\x80\\xc8\\x8d\\xe5B\\xa2\\xfc\\x84\\x8f...</td>\n",
-       "      <td>6</td>\n",
+       "      <td>400</td>\n",
+       "      <td>b'\\xc6ThY\\xc8&amp;\\x86\\x82\\xb8\\xcad\\xfaM\\xe6\\x89\\x...</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -503,63 +503,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>748</th>\n",
+       "      <th>814</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(roundId, startedBy, startedAt)</td>\n",
-       "      <td>b\"w\\xf8\\xf9\\xf0\\xfdU\\\\\\xcd\\xb3g`\\x19T,\\x8b\\xc4...</td>\n",
-       "      <td>21693251</td>\n",
+       "      <td>b'\\x94\\x107\\x9ac\\x8e\\xdf\\xa4=^\\xa7\\xc4\\xbc\\xf7...</td>\n",
+       "      <td>21693351</td>\n",
        "      <td>NewRound</td>\n",
-       "      <td>299</td>\n",
-       "      <td>b'*io-^=\\xa9\\x0b\\x10m\\xff\\xe9\\xe0\\xff\\xe9i\\x07...</td>\n",
-       "      <td>122</td>\n",
+       "      <td>248</td>\n",
+       "      <td>b'\\xad\\x1b\\xaa\\xd3!)\\\\\\x05\\x19n,a\\x14\\xd0/\\xb8...</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>749</th>\n",
+       "      <th>815</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(current, roundId, updatedAt)</td>\n",
-       "      <td>b\"w\\xf8\\xf9\\xf0\\xfdU\\\\\\xcd\\xb3g`\\x19T,\\x8b\\xc4...</td>\n",
-       "      <td>21693251</td>\n",
+       "      <td>b'\\x94\\x107\\x9ac\\x8e\\xdf\\xa4=^\\xa7\\xc4\\xbc\\xf7...</td>\n",
+       "      <td>21693351</td>\n",
        "      <td>AnswerUpdated</td>\n",
-       "      <td>300</td>\n",
-       "      <td>b'*io-^=\\xa9\\x0b\\x10m\\xff\\xe9\\xe0\\xff\\xe9i\\x07...</td>\n",
-       "      <td>122</td>\n",
+       "      <td>249</td>\n",
+       "      <td>b'\\xad\\x1b\\xaa\\xd3!)\\\\\\x05\\x19n,a\\x14\\xd0/\\xb8...</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>750</th>\n",
+       "      <th>816</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(aggregatorRoundId, answer, transmitter, obser...</td>\n",
-       "      <td>b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...</td>\n",
-       "      <td>21693253</td>\n",
+       "      <td>b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...</td>\n",
+       "      <td>21693352</td>\n",
        "      <td>NewTransmission</td>\n",
-       "      <td>180</td>\n",
-       "      <td>b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...</td>\n",
-       "      <td>27</td>\n",
+       "      <td>570</td>\n",
+       "      <td>b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>751</th>\n",
+       "      <th>817</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(roundId, startedBy, startedAt)</td>\n",
-       "      <td>b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...</td>\n",
-       "      <td>21693253</td>\n",
+       "      <td>b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...</td>\n",
+       "      <td>21693352</td>\n",
        "      <td>NewRound</td>\n",
-       "      <td>181</td>\n",
-       "      <td>b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...</td>\n",
-       "      <td>27</td>\n",
+       "      <td>571</td>\n",
+       "      <td>b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>752</th>\n",
+       "      <th>818</th>\n",
        "      <td>0xE41B5D02E64b165e77f12b72Bf80B56d076000CF</td>\n",
        "      <td>(current, roundId, updatedAt)</td>\n",
-       "      <td>b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...</td>\n",
-       "      <td>21693253</td>\n",
+       "      <td>b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...</td>\n",
+       "      <td>21693352</td>\n",
        "      <td>AnswerUpdated</td>\n",
-       "      <td>182</td>\n",
-       "      <td>b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...</td>\n",
-       "      <td>27</td>\n",
+       "      <td>572</td>\n",
+       "      <td>b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>753 rows × 8 columns</p>\n",
+       "<p>819 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -570,11 +570,11 @@
        "3    0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
        "4    0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
        "..                                          ...   \n",
-       "748  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
-       "749  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
-       "750  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
-       "751  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
-       "752  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
+       "814  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
+       "815  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
+       "816  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
+       "817  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
+       "818  0xE41B5D02E64b165e77f12b72Bf80B56d076000CF   \n",
        "\n",
        "                                                  args  \\\n",
        "0    (aggregatorRoundId, answer, transmitter, obser...   \n",
@@ -583,52 +583,52 @@
        "3    (aggregatorRoundId, answer, transmitter, obser...   \n",
        "4                      (roundId, startedBy, startedAt)   \n",
        "..                                                 ...   \n",
-       "748                    (roundId, startedBy, startedAt)   \n",
-       "749                      (current, roundId, updatedAt)   \n",
-       "750  (aggregatorRoundId, answer, transmitter, obser...   \n",
-       "751                    (roundId, startedBy, startedAt)   \n",
-       "752                      (current, roundId, updatedAt)   \n",
+       "814                    (roundId, startedBy, startedAt)   \n",
+       "815                      (current, roundId, updatedAt)   \n",
+       "816  (aggregatorRoundId, answer, transmitter, obser...   \n",
+       "817                    (roundId, startedBy, startedAt)   \n",
+       "818                      (current, roundId, updatedAt)   \n",
        "\n",
        "                                             blockHash  blockNumber  \\\n",
-       "0    b'/\\x858\\xa8_d>e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...     21692255   \n",
-       "1    b'/\\x858\\xa8_d>e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...     21692255   \n",
-       "2    b'/\\x858\\xa8_d>e~\\xe5\\xf0c\\xe3\\xa8\\xaf\\x93SV\\x...     21692255   \n",
-       "3    b'\\x1d\\xb5\\xe4\\xb7\\x14+\\xc8\\xcf\\xaf\\xaab\\x1f\\x...     21692260   \n",
-       "4    b'\\x1d\\xb5\\xe4\\xb7\\x14+\\xc8\\xcf\\xaf\\xaab\\x1f\\x...     21692260   \n",
+       "0    b'E\\xa9\\xbd\\xa2\\xb4!<\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...     21692352   \n",
+       "1    b'E\\xa9\\xbd\\xa2\\xb4!<\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...     21692352   \n",
+       "2    b'E\\xa9\\xbd\\xa2\\xb4!<\\xd4\\xe4`\\xf9\\x97\\xcf\\xf2...     21692352   \n",
+       "3    b':\\xde\\xa4\\xfe}u\\x81=Z@u,!\\x02\\x84 \\xd5\\x89$\\...     21692354   \n",
+       "4    b':\\xde\\xa4\\xfe}u\\x81=Z@u,!\\x02\\x84 \\xd5\\x89$\\...     21692354   \n",
        "..                                                 ...          ...   \n",
-       "748  b\"w\\xf8\\xf9\\xf0\\xfdU\\\\\\xcd\\xb3g`\\x19T,\\x8b\\xc4...     21693251   \n",
-       "749  b\"w\\xf8\\xf9\\xf0\\xfdU\\\\\\xcd\\xb3g`\\x19T,\\x8b\\xc4...     21693251   \n",
-       "750  b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...     21693253   \n",
-       "751  b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...     21693253   \n",
-       "752  b\"\\xd3fh\\x14\\x93\\xe2V\\xcao\\x80R\\xd7\\xda5s\\xed'...     21693253   \n",
+       "814  b'\\x94\\x107\\x9ac\\x8e\\xdf\\xa4=^\\xa7\\xc4\\xbc\\xf7...     21693351   \n",
+       "815  b'\\x94\\x107\\x9ac\\x8e\\xdf\\xa4=^\\xa7\\xc4\\xbc\\xf7...     21693351   \n",
+       "816  b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...     21693352   \n",
+       "817  b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...     21693352   \n",
+       "818  b\"\\x7f'\\x0f_E]\\xfaj\\x92\\xb1\\xab\\x18k\\xf2\\x1d\\x...     21693352   \n",
        "\n",
        "               event  logIndex  \\\n",
-       "0    NewTransmission       104   \n",
-       "1           NewRound       105   \n",
-       "2      AnswerUpdated       106   \n",
-       "3    NewTransmission       211   \n",
-       "4           NewRound       212   \n",
+       "0    NewTransmission       835   \n",
+       "1           NewRound       836   \n",
+       "2      AnswerUpdated       837   \n",
+       "3    NewTransmission       399   \n",
+       "4           NewRound       400   \n",
        "..               ...       ...   \n",
-       "748         NewRound       299   \n",
-       "749    AnswerUpdated       300   \n",
-       "750  NewTransmission       180   \n",
-       "751         NewRound       181   \n",
-       "752    AnswerUpdated       182   \n",
+       "814         NewRound       248   \n",
+       "815    AnswerUpdated       249   \n",
+       "816  NewTransmission       570   \n",
+       "817         NewRound       571   \n",
+       "818    AnswerUpdated       572   \n",
        "\n",
        "                                       transactionHash  transactionIndex  \n",
-       "0    b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...                23  \n",
-       "1    b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...                23  \n",
-       "2    b'\\xed\\x12`\\xbae\\x1a\\xfd\\xdc9\\x0f\\xc1\\x86=i\\xb...                23  \n",
-       "3    b'%\\x96y!\\x93\\x80\\xc8\\x8d\\xe5B\\xa2\\xfc\\x84\\x8f...                 6  \n",
-       "4    b'%\\x96y!\\x93\\x80\\xc8\\x8d\\xe5B\\xa2\\xfc\\x84\\x8f...                 6  \n",
+       "0    b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...               101  \n",
+       "1    b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...               101  \n",
+       "2    b'\\x9a\\xab\\x1dR$\\x81\\x7f\\x9f\\xb0\\xb3)\\x8a\\x10\\...               101  \n",
+       "3    b'\\xc6ThY\\xc8&\\x86\\x82\\xb8\\xcad\\xfaM\\xe6\\x89\\x...                40  \n",
+       "4    b'\\xc6ThY\\xc8&\\x86\\x82\\xb8\\xcad\\xfaM\\xe6\\x89\\x...                40  \n",
        "..                                                 ...               ...  \n",
-       "748  b'*io-^=\\xa9\\x0b\\x10m\\xff\\xe9\\xe0\\xff\\xe9i\\x07...               122  \n",
-       "749  b'*io-^=\\xa9\\x0b\\x10m\\xff\\xe9\\xe0\\xff\\xe9i\\x07...               122  \n",
-       "750  b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...                27  \n",
-       "751  b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...                27  \n",
-       "752  b'd\\xe0\\xbb!\\x86\\x86U\\xb7\\x89A\\xf5O\\x98\\xeb\\xc...                27  \n",
+       "814  b'\\xad\\x1b\\xaa\\xd3!)\\\\\\x05\\x19n,a\\x14\\xd0/\\xb8...                37  \n",
+       "815  b'\\xad\\x1b\\xaa\\xd3!)\\\\\\x05\\x19n,a\\x14\\xd0/\\xb8...                37  \n",
+       "816  b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...                69  \n",
+       "817  b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...                69  \n",
+       "818  b\"{\\x184'\\xf0\\xb1y\\x16\\xa6\\x9a\\xdc|W@\\x86U\\xee...                69  \n",
        "\n",
-       "[753 rows x 8 columns]"
+       "[819 rows x 8 columns]"
       ]
      },
      "execution_count": 9,
@@ -637,10 +637,6 @@
     }
    ],
    "source": [
-    "NewTransmission_ABI = get_event_abi(abi, 'NewTransmission')\n",
-    "assert len(NewTransmission_ABI) > 0\n",
-    "NewTransmission_topic = event_topics.loc['NewTransmission','topic'] \n",
-    "\n",
     "#pull all the logs from an address\n",
     "logs = w3.eth.get_logs({\"address\": contract_address\n",
     "                       #,\"topics\":[NewTransmission_topic] #optional filter\n",
@@ -664,16 +660,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d57c050f",
+   "id": "dd3db59f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "event\n",
-       "AnswerUpdated      251\n",
-       "NewRound           251\n",
-       "NewTransmission    251\n",
+       "AnswerUpdated      273\n",
+       "NewRound           273\n",
+       "NewTransmission    273\n",
        "Name: transactionHash, dtype: int64"
       ]
      },
@@ -696,27 +692,27 @@
     {
      "data": {
       "text/plain": [
-       "AttributeDict({'aggregatorRoundId': 608705,\n",
-       " 'answer': 288203436287,\n",
-       " 'transmitter': '0x550365027554bD20D750f9361e460C7428ffBd75',\n",
-       " 'observations': [288131632180,\n",
-       "  288152000000,\n",
-       "  288162838882,\n",
-       "  288162838882,\n",
-       "  288162838882,\n",
-       "  288203436287,\n",
-       "  288203436287,\n",
-       "  288203436287,\n",
-       "  288203436287,\n",
-       "  288203436287,\n",
-       "  288315000000,\n",
-       "  288438000000,\n",
-       "  288542862768,\n",
-       "  288628924100,\n",
-       "  288639704584,\n",
-       "  288715271290],\n",
-       " 'observers': b'\\x0e\\r\\x08\\x0c\\x0f\\x05\\x02\\x04\\n\\x01\\x00\\x03\\x0b\\t\\x07\\x06',\n",
-       " 'rawReportContext': b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x93t\\x13\\xae\\xdb\\x18\\xe5v\\x17J\\xbf\\xf5\\x0e\\x80\\xdcF\\x00\\x02+\\x84\\x01'})"
+       "AttributeDict({'aggregatorRoundId': 608723,\n",
+       " 'answer': 288082043467,\n",
+       " 'transmitter': '0x7BF377f69Da0E46Da1502D5F2bcf9fB00c3B610b',\n",
+       " 'observations': [288000650865,\n",
+       "  288000650865,\n",
+       "  288003000000,\n",
+       "  288003000000,\n",
+       "  288003000000,\n",
+       "  288003000000,\n",
+       "  288039087359,\n",
+       "  288039087359,\n",
+       "  288082043467,\n",
+       "  288109006967,\n",
+       "  288143315310,\n",
+       "  288143315310,\n",
+       "  288181204014,\n",
+       "  288249271221,\n",
+       "  288459855332,\n",
+       "  288738506651],\n",
+       " 'observers': b'\\x02\\x04\\x00\\r\\n\\x0f\\x01\\x08\\x0c\\x0e\\x03\\t\\x07\\x0b\\x06\\x05',\n",
+       " 'rawReportContext': b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x93t\\x13\\xae\\xdb\\x18\\xe5v\\x17J\\xbf\\xf5\\x0e\\x80\\xdcF\\x00\\x02+\\x89\\x01'})"
       ]
      },
      "execution_count": 11,
