add deviation switched off Arbitrum

--- a/chainlink_pricefeeds.ipynb
+++ b/chainlink_pricefeeds.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "3a4cddce",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7c4dd9cf",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "415b786a",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a43c7def",
    "metadata": {},
    "outputs": [
@@ -135,6 +135,7 @@
        "      <th>price</th>\n",
        "      <th>price_decimal</th>\n",
        "      <th>deviation</th>\n",
+       "      <th>threshold</th>\n",
        "      <th>blockNumber</th>\n",
        "      <th>tx_hash</th>\n",
        "    </tr>\n",
@@ -147,7 +148,8 @@
        "      <td>Ethereum</td>\n",
        "      <td>573420000000000</td>\n",
        "      <td>0.00057342</td>\n",
-       "      <td>0.010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>12016380</td>\n",
        "      <td>0xd1dd11c4a774208e8a5853512266b881cc65e15cf139...</td>\n",
        "    </tr>\n",
@@ -158,7 +160,8 @@
        "      <td>Ethereum</td>\n",
        "      <td>570415891417893</td>\n",
        "      <td>0.000570415891417893</td>\n",
-       "      <td>0.010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>12016804</td>\n",
        "      <td>0x90ed10651237c6fda63c73db812f4955a661a4012d45...</td>\n",
        "    </tr>\n",
@@ -169,7 +172,8 @@
        "      <td>Ethereum</td>\n",
        "      <td>567410000000000</td>\n",
        "      <td>0.00056741</td>\n",
-       "      <td>0.010</td>\n",
+       "      <td>-0.010480973806285099</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>12016873</td>\n",
        "      <td>0x7db7cbbab8b56ba3a3ac909d9b8dde35eecb3343ef71...</td>\n",
        "    </tr>\n",
@@ -180,7 +184,8 @@
        "      <td>Ethereum</td>\n",
        "      <td>567260000000000</td>\n",
        "      <td>0.00056726</td>\n",
-       "      <td>0.010</td>\n",
+       "      <td>-0.000264359105408785</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>12016878</td>\n",
        "      <td>0x1784ee61a3f196a4687b2a5ced31a1a1e2d64abb6ba3...</td>\n",
        "    </tr>\n",
@@ -191,7 +196,8 @@
        "      <td>Ethereum</td>\n",
        "      <td>564705000000000</td>\n",
        "      <td>0.000564705</td>\n",
-       "      <td>0.010</td>\n",
+       "      <td>-0.010011802798300939</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>12017032</td>\n",
        "      <td>0xed14b08e3b2f7ff0ceb2fa88ee830a4b99235e9ecbcb...</td>\n",
        "    </tr>\n",
@@ -205,93 +211,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9940</th>\n",
-       "      <td>dai-eth</td>\n",
-       "      <td>2021-12-15 22:32:38</td>\n",
+       "      <th>9953</th>\n",
+       "      <td>usdc-eth</td>\n",
+       "      <td>2021-12-18 03:33:59</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>248324062931301</td>\n",
-       "      <td>0.000248324062931301</td>\n",
-       "      <td>0.010</td>\n",
-       "      <td>13812443</td>\n",
-       "      <td>0xe8a91a011cf759ce6a669a3d64fb4fe8caafe15038c9...</td>\n",
+       "      <td>261765350000000</td>\n",
+       "      <td>0.00026176535</td>\n",
+       "      <td>-0.010539540868538477</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>13826697</td>\n",
+       "      <td>0x327c415fbd3f33c70a6ee0bfefa2d218a6b67ee3b25a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9941</th>\n",
-       "      <td>btc-eth</td>\n",
-       "      <td>2021-12-15 22:57:54</td>\n",
-       "      <td>Arbitrum</td>\n",
-       "      <td>12167201351706361000</td>\n",
-       "      <td>12.167201351706362189</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3886834</td>\n",
-       "      <td>0x8b28c4326c5431d3bb59fc3cfd58c67d2d1cc8f1b2b6...</td>\n",
+       "      <th>9954</th>\n",
+       "      <td>usdc-eth</td>\n",
+       "      <td>2021-12-18 03:41:37</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>258261826109423</td>\n",
+       "      <td>0.000258261826109423</td>\n",
+       "      <td>-0.013384215636550012</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>13826729</td>\n",
+       "      <td>0x7840a7e2ef69458b66b879bb240874a8960ece70cd43...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9942</th>\n",
-       "      <td>btc-eth</td>\n",
-       "      <td>2021-12-16 01:26:54</td>\n",
-       "      <td>Arbitrum</td>\n",
-       "      <td>12106201171894014000</td>\n",
-       "      <td>12.106201171894014124</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3889012</td>\n",
-       "      <td>0x272fa449962f14ef86242385e20a7f981be68f748622...</td>\n",
+       "      <th>9955</th>\n",
+       "      <td>dai-eth</td>\n",
+       "      <td>2021-12-18 03:41:37</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>259966520000000</td>\n",
+       "      <td>0.00025996652</td>\n",
+       "      <td>-0.011649364374480164</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>13826729</td>\n",
+       "      <td>0x82e4dd49de4bda778e4d5a17c280f95053cb3242b35f...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9943</th>\n",
-       "      <td>btc-eth</td>\n",
-       "      <td>2021-12-16 03:50:35</td>\n",
-       "      <td>Arbitrum</td>\n",
-       "      <td>12166930283489480000</td>\n",
-       "      <td>12.166930283489481468</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3890920</td>\n",
-       "      <td>0xdf58376a6de5320ddb541b8ee2317081ecb9fde9909b...</td>\n",
+       "      <th>9956</th>\n",
+       "      <td>dai-eth</td>\n",
+       "      <td>2021-12-18 05:16:46</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>257334353659820</td>\n",
+       "      <td>0.00025733435365982</td>\n",
+       "      <td>-0.010125020484099245</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>13827135</td>\n",
+       "      <td>0xac0198e2ad1de57c091811087e4cb904336a511b0ab4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9944</th>\n",
-       "      <td>btc-eth</td>\n",
-       "      <td>2021-12-16 07:46:39</td>\n",
-       "      <td>Arbitrum</td>\n",
-       "      <td>12103916873484815000</td>\n",
-       "      <td>12.103916873484815042</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>3893957</td>\n",
-       "      <td>0xb43654c605778383ea4237c1c1634793c5119c08eac8...</td>\n",
+       "      <th>9957</th>\n",
+       "      <td>usdc-eth</td>\n",
+       "      <td>2021-12-18 05:37:33</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>255554870739204</td>\n",
+       "      <td>0.000255554870739204</td>\n",
+       "      <td>-0.010481438201680238</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>13827246</td>\n",
+       "      <td>0x885ecc5f90ab7810acae7b2c1a1c6f46e33194d9f59a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9945 rows × 8 columns</p>\n",
+       "<p>9958 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        ticker          updated_at     chain                 price  \\\n",
-       "0      dai-eth 2021-03-11 09:07:25  Ethereum       573420000000000   \n",
-       "1     usdc-eth 2021-03-11 10:43:36  Ethereum       570415891417893   \n",
-       "2      dai-eth 2021-03-11 11:01:31  Ethereum       567410000000000   \n",
-       "3      dai-eth 2021-03-11 11:02:27  Ethereum       567260000000000   \n",
-       "4     usdc-eth 2021-03-11 11:32:15  Ethereum       564705000000000   \n",
-       "...        ...                 ...       ...                   ...   \n",
-       "9940   dai-eth 2021-12-15 22:32:38  Ethereum       248324062931301   \n",
-       "9941   btc-eth 2021-12-15 22:57:54  Arbitrum  12167201351706361000   \n",
-       "9942   btc-eth 2021-12-16 01:26:54  Arbitrum  12106201171894014000   \n",
-       "9943   btc-eth 2021-12-16 03:50:35  Arbitrum  12166930283489480000   \n",
-       "9944   btc-eth 2021-12-16 07:46:39  Arbitrum  12103916873484815000   \n",
+       "        ticker          updated_at     chain            price  \\\n",
+       "0      dai-eth 2021-03-11 09:07:25  Ethereum  573420000000000   \n",
+       "1     usdc-eth 2021-03-11 10:43:36  Ethereum  570415891417893   \n",
+       "2      dai-eth 2021-03-11 11:01:31  Ethereum  567410000000000   \n",
+       "3      dai-eth 2021-03-11 11:02:27  Ethereum  567260000000000   \n",
+       "4     usdc-eth 2021-03-11 11:32:15  Ethereum  564705000000000   \n",
+       "...        ...                 ...       ...              ...   \n",
+       "9953  usdc-eth 2021-12-18 03:33:59  Ethereum  261765350000000   \n",
+       "9954  usdc-eth 2021-12-18 03:41:37  Ethereum  258261826109423   \n",
+       "9955   dai-eth 2021-12-18 03:41:37  Ethereum  259966520000000   \n",
+       "9956   dai-eth 2021-12-18 05:16:46  Ethereum  257334353659820   \n",
+       "9957  usdc-eth 2021-12-18 05:37:33  Ethereum  255554870739204   \n",
        "\n",
-       "              price_decimal  deviation  blockNumber  \\\n",
-       "0                0.00057342      0.010     12016380   \n",
-       "1      0.000570415891417893      0.010     12016804   \n",
-       "2                0.00056741      0.010     12016873   \n",
-       "3                0.00056726      0.010     12016878   \n",
-       "4               0.000564705      0.010     12017032   \n",
-       "...                     ...        ...          ...   \n",
-       "9940   0.000248324062931301      0.010     13812443   \n",
-       "9941  12.167201351706362189      0.005      3886834   \n",
-       "9942  12.106201171894014124      0.005      3889012   \n",
-       "9943  12.166930283489481468      0.005      3890920   \n",
-       "9944  12.103916873484815042      0.005      3893957   \n",
+       "             price_decimal             deviation  threshold  blockNumber  \\\n",
+       "0               0.00057342                   NaN       0.01     12016380   \n",
+       "1     0.000570415891417893                   NaN       0.01     12016804   \n",
+       "2               0.00056741 -0.010480973806285099       0.01     12016873   \n",
+       "3               0.00056726 -0.000264359105408785       0.01     12016878   \n",
+       "4              0.000564705 -0.010011802798300939       0.01     12017032   \n",
+       "...                    ...                   ...        ...          ...   \n",
+       "9953         0.00026176535 -0.010539540868538477       0.01     13826697   \n",
+       "9954  0.000258261826109423 -0.013384215636550012       0.01     13826729   \n",
+       "9955         0.00025996652 -0.011649364374480164       0.01     13826729   \n",
+       "9956   0.00025733435365982 -0.010125020484099245       0.01     13827135   \n",
+       "9957  0.000255554870739204 -0.010481438201680238       0.01     13827246   \n",
        "\n",
        "                                                tx_hash  \n",
        "0     0xd1dd11c4a774208e8a5853512266b881cc65e15cf139...  \n",
@@ -300,16 +312,16 @@
        "3     0x1784ee61a3f196a4687b2a5ced31a1a1e2d64abb6ba3...  \n",
        "4     0xed14b08e3b2f7ff0ceb2fa88ee830a4b99235e9ecbcb...  \n",
        "...                                                 ...  \n",
-       "9940  0xe8a91a011cf759ce6a669a3d64fb4fe8caafe15038c9...  \n",
-       "9941  0x8b28c4326c5431d3bb59fc3cfd58c67d2d1cc8f1b2b6...  \n",
-       "9942  0x272fa449962f14ef86242385e20a7f981be68f748622...  \n",
-       "9943  0xdf58376a6de5320ddb541b8ee2317081ecb9fde9909b...  \n",
-       "9944  0xb43654c605778383ea4237c1c1634793c5119c08eac8...  \n",
+       "9953  0x327c415fbd3f33c70a6ee0bfefa2d218a6b67ee3b25a...  \n",
+       "9954  0x7840a7e2ef69458b66b879bb240874a8960ece70cd43...  \n",
+       "9955  0x82e4dd49de4bda778e4d5a17c280f95053cb3242b35f...  \n",
+       "9956  0xac0198e2ad1de57c091811087e4cb904336a511b0ab4...  \n",
+       "9957  0x885ecc5f90ab7810acae7b2c1a1c6f46e33194d9f59a...  \n",
        "\n",
-       "[9945 rows x 8 columns]"
+       "[9958 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +338,8 @@
     "                      }\n",
     "\n",
     "config = {'Ethereum':price_contracts_eth, \n",
-    "          'Arbitrum' : price_contracts_arb }\n",
+    "          #'Arbitrum' : price_contracts_arb -->Arbitrum \n",
+    "         }\n",
     "\n",
     "topic_AnswerUpdated = event_topics[(event_topics['event']=='AnswerUpdated') & (event_topics['contract_type']=='OCR')]['topic'].values[0]\n",
     "\n",
@@ -336,7 +349,7 @@
     "\n",
     "        w3 = price_contracts[ticker][0]\n",
     "        address = price_contracts[ticker][1]\n",
-    "        deviations = price_contracts[ticker][2]\n",
+    "        threshold = price_contracts[ticker][2]\n",
     "\n",
     "        if w3.eth.chain_id == 1:\n",
     "            from_block = 0\n",
@@ -346,14 +359,15 @@
     "        decimals = w3.eth.contract(address=address, abi=aggregator_abi_str).functions.decimals().call()\n",
     "\n",
     "        df_ticker = get_logs(w3, address, [topic_AnswerUpdated], from_block)\n",
-    "        df_ticker[['chain', 'ticker', 'deviation']] = [chain , ticker, deviations]\n",
+    "        df_ticker[['chain', 'ticker', 'threshold']] = [chain , ticker, threshold]\n",
     "        \n",
     "        df_ticker['tx_hash']       = df_ticker['transactionHash'].apply(lambda x: x.hex())        \n",
     "        df_ticker['updated_at']    = df_ticker['args'].apply(lambda x: pd.to_datetime(x['updatedAt'], unit='s'))\n",
     "        df_ticker['price']         = df_ticker['args'].apply(lambda x: x['current'])\n",
     "        df_ticker['price_decimal'] = df_ticker['price']/10**(decimals)\n",
+    "        df_ticker['deviation']     = df_ticker['price']/df_ticker['price'].shift(1) - 1\n",
     "        \n",
-    "        df = df.append(df_ticker[['ticker', 'updated_at', 'chain','price', 'price_decimal', 'deviation', 'blockNumber','tx_hash']], ignore_index=True)\n",
+    "        df = df.append(df_ticker[['ticker', 'updated_at', 'chain','price', 'price_decimal', 'deviation', 'threshold', 'blockNumber','tx_hash']], ignore_index=True)\n",
     "\n",
     "df = df.sort_values(by = 'updated_at').reset_index(drop=True)\n",
     "pd.set_option(\"precision\", 18)\n",
@@ -363,8 +377,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "e7bb7109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('pricefeeds.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1bb3b33b",
+   "id": "2af396bc",
    "metadata": {},
    "outputs": [],
    "source": []
