--- a/chainlink_pricefeeds.ipynb
+++ b/chainlink_pricefeeds.ipynb
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e7bb7109",
+   "id": "e95227a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,9 +386,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7769a79",
+   "metadata": {},
+   "source": [
+    "Exploratory report:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cade8847",
+   "metadata": {},
+   "source": [
+    "https://datastudio.google.com/reporting/ce9b69b3-3d9b-4aee-bb62-7baab90a0eca"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af396bc",
+   "id": "c92cffe8",
    "metadata": {},
    "outputs": [],
    "source": []
